  - update CUP writer to Naviter 2022 specification with all 14 columns,
    preventing data loss for details and embedded files on save
  - fix text field truncation in waypoint editor (32-character limit
    removed) #1541
  - fix waypoint editor silently discarding altitude and type changes
  - checklist: use .xcc extension, fix crash with empty profile path #2094
* ui
  - streamlined, and optimized icons
  - apply dark mode settings to thermal assistant
  - apply dark mode to large flarm radar
  - add options to avoid infoboxes to flarm radar widget
  - changed location of setting for flarm radar position
  - Flarm gauge: when traffic is farther than 4 km away, it disappears
  - add new gesture ULDR to access quick menu
  - add quick menu page buttons in case of touch screen
  - add quit button to quick menu
  - infoboxen: new setting, allow scaling of title/comment font
  - Radar / Thermalassistant Gauges: Placement to avoid InfoBoxen and Overlap
  - Thermal assistant: New positions on top of map to avoid hiding airspace warnings
  - Add new InfoBox 'Home altitude difference' (Home AltD)
  - Add new InfoBox 'Alternate 1 altitude difference' (Altn 1 AltD)
  - Add new InfoBox 'Alternate 2 altitude difference' (Altn 2 AltD)
  - Show transponder mode (if available) in transponder code InfoBox
  - add helpers on infoboxes for Argentinean contests 95% distance rule
  - Popup messages now appear at the top of the map
  - add status messages for user actions and state changes (alternates, task abort, task armed, final glide mode, terrain/topography visibility, airspace visibility)
  - improve task resume: report failure reasons and allow resuming goto when no ordered task exists
  - FlarmTrafficWindow: align colors of FlarmTraffic with map for consistency
  - BigTrafficWidget: Save/Restore FLARM radar zoom on page change
  - BigTrafficWidget: zoom range to 5km when opening big radar via the FlarmGauge